hphp/hack/test/typecheck/trait_bug3.php.exp
File "trait_bug3.php", line 6, characters 7-9:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
File "trait_bug3.php", line 3, characters 7-9:
Definition is here
