hphp/hack/test/typecheck/trait_bug3.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.
trait Foo<T> {}

class Bar {
  use Foo;
}
